<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".presentation.dictionary.add.DictionaryAddActivity">

    <EditText
        android:id="@+id/dictionaryName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="25sp"
        android:hint="@string/dictionary_add_name_hint"
        android:textColor="@color/colorTextBlack"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_add_from_lang_text"
            android:textSize="25sp"
            android:textColor="@color/colorTextBlack"/>
        <Spinner
            android:id="@+id/dictionaryLanguageFromSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dictionary_add_to_lang_text"
            android:textSize="25sp"
            android:textColor="@color/colorTextBlack"/>
        <Spinner
            android:id="@+id/dictionaryLanguageToSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            />
    </LinearLayout>

    <Button
        android:id="@+id/dictionaryAddButton"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:textSize="25sp"
        android:text="@string/dictionary_add_button_text"
        android:textColor="@color/colorTextBlack"
        android:background="@drawable/button_back"
        />



</LinearLayout>